# extractor

./: .gitignore  Cargo.toml  LICENSE.txt  binwalkInterface.py  extractor.py  install.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
python/femu_extractor/: __init__.py  binwalkInterface.py  extractor.py
src/: lib.rs
