[package]
name = "femu-extractor"
version = "0.1.0"
edition = "2021"

[lib]
name = "femu_extractor"
crate-type = ["cdylib"]

[dependencies]
binwalk = "3.1.0"
pyo3 = { version = "0.21", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
