[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "femu-extractor"
version = "0.1.0"
description = "Firmware extraction tool using Rust binwalk bindings"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "psycopg2-binary>=2.9.10",
    "python-magic>=0.4.27",
]

[tool.maturin]
module-name = "femu_extractor._lib"
python-source = "python"
features = ["pyo3/extension-module"]
